Refactor CheckoutReleases: migliorata la leggibilità e gestiti log e risorse